--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
 data/
+sp_scripts/
+function_scripts/
+view_scripts/
 # If you prefer the allow list template instead of the deny list, see community template:
 # https://github.com/github/gitignore/blob/main/community/Golang/Go.AllowList.gitignore
 #
